experiment with causal ml, start pipeline

--- a/using-CausalML.ipynb
+++ b/using-CausalML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -35,20 +35,24 @@
     "N = 1000\n",
     "k = 10\n",
     "u = UserInterface(N, k, seed=5, categorical_covariates = None)\n",
-    "\n",
+    "## confounding of covariates, clear treatment effect\n",
     "u.generate_treatment(random_assignment = False, \n",
     "                     assignment_prob = 'low', \n",
-    "                     constant_pos = False, \n",
+    "                     constant_pos = True, \n",
     "                     constant_neg = False,\n",
-    "                     heterogeneous_pos = True, \n",
+    "                     heterogeneous_pos = False, \n",
     "                     heterogeneous_neg = False, \n",
     "                     no_treatment = False, \n",
     "                     discrete_heterogeneous = False,\n",
     "                     treatment_option_weights = None, \n",
     "                     intensity = 10)\n",
     "\n",
-    "y, X, assignment, treatment = u.output_data(binary=False, \n",
-    "                                               x_y_relation = 'nonlinear_interaction')"
+    "y, X, assignment_confoundedC_clearT, treatment = u.output_data(binary=False, \n",
+    "                                               x_y_relation = 'nonlinear_interaction')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -119,16 +123,22 @@
     "2.) Next, we __optimized the R-loss function__. We again tried methods based on both the lasso\n",
     "and boosting. This time, the lasso achieved a slightly lower training set cross-validated\n",
     "R-loss than boosting. We thus __chose the lasso-based ˆτ(·) fit as our final model for τ∗(·).__\n",
-    "NB: figure out what they mean by the loss function.\n",
+    "\n",
+    "\n",
+    ">>>> the model is the loss funciton plus the regularizer on treatment effect.\n",
+    "the loss function: choose t() to minimise the loss function, which contains in it the propensity sore and the nuisance functon.\n",
+    "\n",
+    ">>>> the stacking should then happen on the different way we can estimate the treatment t().  \n",
+    ">>>> ie etsimate \n",
     "\n",
     "Because we know the true CATE function τ∗(·) in our semi-synthetic data\n",
     "generative distribution, we can evaluate the oracle test set mean-squared error. _It thus appears that, in this example, there is value in using a non-parametric method for estimating ˆe(·) and ˆm(·), but then using the simpler\n",
     "lasso for ˆτ (·)._\n",
     "\n",
     "\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "THE STACKING PART\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
     "Nie and Wager talk about stacking to estimate the t() \"function\", not the propensity or the nuisance funciton. \n",
     "== allow the stacking step (12) to freely adjust a constant treatment effect term c, and we add an intercept b that can be used to absorb any potential bias of ˆm. (implying that there is a common m(), for each method of estimating the treatment effect, use same m()...)\n",
@@ -139,29 +149,34 @@
     "\n",
     "(^^DOES THIS MEAN THAT THEY USED BART AND CAUSAL FOREST TO ESTIMATE M AND E FOR THE SINGLE R LEARNERS??)\n",
     "\n",
+    "!!!!! they also mention having good out-of-fold estimates for m() and e() and im not sure what they mean here. \n",
+    "!!!!! Out-of-Fold Predictions: Predictions made by models during the k-fold cross-validation procedure on the holdout examples.\n",
     "\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
-    "WHAT DOES IT MEAN ABOUT CONDITIONAL VS AVERAGE TREATMENT EFFECTS ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "SO: does causal ml have functonality for this? \n",
+    "the -i index signifies out of fold etimate\n",
+    "\n",
+    "\n",
+    "\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "WHAT DOES IT MEAN ABOUT CONDITIONAL VS AVERAGE TREATMENT EFFECTS ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
     "THEY DONT REALLY LOOK AT IT. the R, T and U learners all generate predicitons for CATE, S learner only average.\n",
     "they do it by plotting a histogram of the predicted CATE. \n",
     "the histogram means that the y axis is just the count. for some reason they call it the 'number of samples'.\n",
     "\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
-    "MODEL VALIDATIOON MEANS WHAT ALSO? ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "MODEL VALIDATIOON MEANS WHAT ALSO? ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "deal with that later. \n",
     "\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "NOW YOU NEED:\n",
-    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
     "1.) a stacking library. OR figure out if a stacking method in causalML package exists.\n",
     "  \n",
     "FOR STACKING -- choosing one data type :\n",
     "1.) do the first step of estimating e() and m() the same way for all. consider like in Nie and Wager. YOU MUST BE ABLE TO DO THIS IN CAUSALML PACKAGE.\n",
     "2.) do the second step of estimating the treatment effect in different ways. this you can also do in causalML.\n",
-    "\n",
-    "\n",
     "\n",
     "    WHAT ARE THEY CALLING THE BASE R REGRESSOR? THE REGROSSOR THAT ESTIMATES WHAT?\n",
     "    \n",
@@ -329,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
