--- a/causalML-pipeline.ipynb
+++ b/causalML-pipeline.ipynb
@@ -36,7 +36,13 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.svm import SVR\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import StackingRegressor\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import RidgeCV"
    ]
   },
   {
@@ -48,8 +54,8 @@
     "## create datasets in an array?\n",
     "## for each thing in the data set, take each array and split into 1/3. two new arrays : Test and StackingTrain. \n",
     "# dataSetArray...\n",
-    "N = 30\n",
-    "k = 3\n",
+    "N = 3000\n",
+    "k = 10\n",
     "seed= 5\n",
     "\n",
     "u = UserInterface(N, k, seed=seed, categorical_covariates = None)\n",
@@ -111,23 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##############################################################################################\n",
     "## setupB => randomized trial\n",
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,53 +167,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Get propensity scores using CausalML package. (scores for each dataset and save them in an array)\n",
-    "propensityScores = []\n",
+    "propensityScores_train = []\n",
     "\n",
     "for x in range(3):\n",
     "    pm = ElasticNetPropensityModel(n_fold=5, random_state=42)\n",
-    "    estimatedpropensityscores = pm.fit_predict(X[x], assignment[x])\n",
-    "    propensityScores.append(estimatedpropensityscores)"
+    "    estimatedpropensityscores = pm.fit_predict(X[x][0], assignment[x][0])\n",
+    "    propensityScores_train.append(estimatedpropensityscores)\n",
+    "    \n",
+    "    \n",
+    "#### INFO : the R learner (and others) need propensity scores. there are many ways to compute propensity scores. \n",
+    "#### we can do them on the fly when we call the BaseRRegressor, and estimmate_ate .. default is actuallz elasticnetpropensitymodel\n",
+    "#### but we can also compute them ourselves. \n",
+    "\n",
+    "### compute 1 propensity score per dataset for the R learner. we dont need the propensity score for the ols or for the testing. \n",
+    "\n",
+    "### BUT NOTICE THAT beacuse we dont feed propensitz score into the stacking step, we can see how mis-estimation \n",
+    "### of the propensity score can skew the stacking step. Nie and Wager talk about how bias is absorbed into the intercept term. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the BaseRRegressor class and using XGB:\n",
+      "(array([2.24455078]), array([2.23494995]), array([2.2541516]))\n",
+      "Using the BaseRRegressor class and using Linear Regression:\n",
+      "(array([2.29144445]), array([2.28379145]), array([2.29909745]))\n",
+      "Using the BaseRRegressor class and using DecisionTree:\n",
+      "(array([2.30128838]), array([2.12291699]), array([2.47965978]))\n"
+     ]
+    }
+   ],
    "source": [
     "##############################################################################################\n",
-    "## what are we estimating here.. for one dataset.\n",
+    "## R learner, three kinds of base regressors to estimate the treatment effect.\n",
+    "## three of these can be used to predict on the stacking set, and then create a stacking coefficient for each\n",
     "##############################################################################################\n",
-    "\n",
+    "i = 0\n",
     "# R Learner with propensity score input\n",
     "# Calling the Base Learner class and feeding in XGB\n",
     "learner_r = BaseRRegressor(learner=XGBRegressor())\n",
-    "ate_r_XGBRegressor = learner_r.estimate_ate(X=X[i], treatment = assignment[i], p=propensityScores[i], y=y[i])\n",
+    "ate_r_XGBRegressor = learner_r.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
     "print('Using the BaseRRegressor class and using XGB:')\n",
     "print(ate_r_XGBRegressor)\n",
     "\n",
     "# Calling the Base Learner class and feeding in LinearRegression\n",
     "## comes from from sklearn.linear_model import LinearRegression.. so i assume all can come from there???\n",
     "learner_rLinearRegression = BaseRRegressor(learner=LinearRegression())\n",
-    "ate_r_LinearRegression = learner_rLinearRegression.estimate_ate(X=X[i], treatment = assignment[i], p=propensityScores[i], y=y[i])\n",
+    "ate_r_LinearRegression = learner_rLinearRegression.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
     "print('Using the BaseRRegressor class and using Linear Regression:')\n",
     "print(ate_r_LinearRegression)\n",
     "\n",
-    "\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.ensemble import StackingRegressor\n",
-    "from sklearn.linear_model import LassoCV\n",
-    "from sklearn.linear_model import RidgeCV\n",
-    "\n",
     "learner_p = BaseRRegressor(learner=DecisionTreeRegressor())\n",
-    "ate_r = learner_p.estimate_ate(X=X[i], treatment = assignment[i], p=propensityScores[i], y=y[i])\n",
+    "ate_r = learner_p.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
     "print('Using the BaseRRegressor class and using DecisionTree:')\n",
-    "print(ate_r_A)"
+    "print(ate_r)"
    ]
   },
   {
@@ -231,15 +241,54 @@
     "##############################################################################################\n",
     "## what do you do once you have an ATE estimate? then there is a stacking pipeline...?\n",
     "##############################################################################################\n",
-    "\n",
-    "## there should be an array of ATE estimates. \n",
-    "## https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.StackingRegressor.html#sklearn.ensemble.StackingRegressor\n",
-    "\n",
-    "so the causalml as above outputs ATE estimates and predicitons of a treatment effect for each X_i.\n",
-    "\n",
     "STACKING IS : using these predictions against the true dataset in order to create a better estimate for t(). (you keep m() and e() once they are out-of-fold estimated.)\n",
     "\n",
-    "LUCKY WE HAVE ENDLESS SIMULATED DATA I GUESS.."
+    "casualml package outputs predictions for y? or prediction on a treatment effect? ->> treatment effect!\n",
+    "do the causalml people have anything about the predicted y or does it not really matter that much?\n",
+    "\n",
+    "we need: \n",
+    "1000 predictions for the stacking set from each model (3x stacking)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stacking_data = []\n",
+    "## i think its possible to try without propensity scores...\n",
+    "\n",
+    "cate_r = learner_r.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
+    "cate_linear = learner_rLinearRegression.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
+    "cate_p = learner_p.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
+    "\n",
+    "\n",
+    "## should rename these to something better.\n",
+    "stacking_data.append(cate_r)\n",
+    "stacking_data.append(cate_linear)\n",
+    "stacking_data.append(cate_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "332\n"
+     ]
+    }
+   ],
+   "source": [
+    "## so now we have a 3 x 1000 array of predictions on the same dataset, from three different models.\n",
+    "## BUT WE HAVE ANOTHER EVALUATION PROBLEM!! WHICH IS THAT WE ONLY HAVE THE TRUE TREATMENT EFFECT FROM SOME PROPORTION OF THE DATA.\n",
+    "## so we can only use some of them as predictors. \n",
+    "\n",
+    "print(sum(assignment[i][1]))"
    ]
   },
   {
@@ -251,7 +300,7 @@
     "#to get CATE from the causalml package, predict on some holdout set? \n",
     "### FOR THIS YOU NEED TO CREATE A HOLDOUT SET AT ALL!!!!!\n",
     "cate_r = learner_r.fit_predict(X[i], treatment = assignment[i], y=y[i], p=propensityScores[i])\n",
-    "treatment[i] \n",
+    "\n",
     "\n",
     "### NOT SURE THAT THIS MAKES SENSE AS A PLOT. \n",
     "### you are plotting the PREDICTED treatment effect on the treated. (cate_r)\n",
@@ -291,9 +340,8 @@
     "TODO:\n",
     "\n",
     "1. Create the actual pipeline ('the for loop')\n",
-    "2. create a holdout set for each dataset. i think this can be done by taking 1/2 of each dataset ad adding to another test set. \n",
-    "3. some plots? some evaluation pipepline? \n",
-    "4. figure out how to do the stacking besides the really obvious way. \n"
+    "\n",
+    "3. some plots? some evaluation pipepline? \n"
    ]
   }
  ],
