added stacking dataframe with only treated simulation

--- a/causalML-pipeline.ipynb
+++ b/causalML-pipeline.ipynb
@@ -38,7 +38,6 @@
     "from sklearn.svm import SVR\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import StackingRegressor\n",
     "from sklearn.linear_model import LassoCV\n",
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -200,11 +199,11 @@
      "output_type": "stream",
      "text": [
       "Using the BaseRRegressor class and using XGB:\n",
-      "(array([2.24455078]), array([2.23494995]), array([2.2541516]))\n",
+      "(array([2.25747814]), array([2.24761998]), array([2.2673363]))\n",
       "Using the BaseRRegressor class and using Linear Regression:\n",
-      "(array([2.29144445]), array([2.28379145]), array([2.29909745]))\n",
+      "(array([2.29305972]), array([2.28541808]), array([2.30070137]))\n",
       "Using the BaseRRegressor class and using DecisionTree:\n",
-      "(array([2.30128838]), array([2.12291699]), array([2.47965978]))\n"
+      "(array([2.01970824]), array([1.88192254]), array([2.15749394]))\n"
      ]
     }
    ],
@@ -216,7 +215,7 @@
     "i = 0\n",
     "# R Learner with propensity score input\n",
     "# Calling the Base Learner class and feeding in XGB\n",
-    "learner_r = BaseRRegressor(learner=XGBRegressor())\n",
+    "learner_rXGB = BaseRRegressor(learner=XGBRegressor())\n",
     "ate_r_XGBRegressor = learner_r.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
     "print('Using the BaseRRegressor class and using XGB:')\n",
     "print(ate_r_XGBRegressor)\n",
@@ -228,8 +227,8 @@
     "print('Using the BaseRRegressor class and using Linear Regression:')\n",
     "print(ate_r_LinearRegression)\n",
     "\n",
-    "learner_p = BaseRRegressor(learner=DecisionTreeRegressor())\n",
-    "ate_r = learner_p.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
+    "learner_decisionTree = BaseRRegressor(learner=DecisionTreeRegressor())\n",
+    "ate_r = learner_decisionTree.estimate_ate(X=X[i][0], treatment = assignment[i][0], p=propensityScores_train[0], y=y[i][0])\n",
     "print('Using the BaseRRegressor class and using DecisionTree:')\n",
     "print(ate_r)"
    ]
@@ -244,51 +243,45 @@
     "STACKING IS : using these predictions against the true dataset in order to create a better estimate for t(). (you keep m() and e() once they are out-of-fold estimated.)\n",
     "\n",
     "casualml package outputs predictions for y? or prediction on a treatment effect? ->> treatment effect!\n",
-    "do the causalml people have anything about the predicted y or does it not really matter that much?\n",
-    "\n",
-    "we need: \n",
-    "1000 predictions for the stacking set from each model (3x stacking)"
+    "do the causalml people have anything about the predicted y or does it not really matter that much?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "stacking_data = []\n",
+    "predictions = []\n",
     "## i think its possible to try without propensity scores...\n",
     "\n",
-    "cate_r = learner_r.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
+    "cate_rXGB = learner_rXGB.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
     "cate_linear = learner_rLinearRegression.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
-    "cate_p = learner_p.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
-    "\n",
+    "cate_decisionTree = learner_decisionTree.fit_predict(X[i][1], treatment = assignment[i][1], y=y[i][1])\n",
     "\n",
     "## should rename these to something better.\n",
-    "stacking_data.append(cate_r)\n",
-    "stacking_data.append(cate_linear)\n",
-    "stacking_data.append(cate_p)"
+    "predictions.append(cate_rXGB)\n",
+    "predictions.append(cate_linear)\n",
+    "predictions.append(cate_decisionTree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "332\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## so now we have a 3 x 1000 array of predictions on the same dataset, from three different models.\n",
-    "## BUT WE HAVE ANOTHER EVALUATION PROBLEM!! WHICH IS THAT WE ONLY HAVE THE TRUE TREATMENT EFFECT FROM SOME PROPORTION OF THE DATA.\n",
-    "## so we can only use some of them as predictors. \n",
+    "## so we can only use some of our dataset to predict on, in order to train a model. \n",
     "\n",
-    "print(sum(assignment[i][1]))"
+    "## ok you can call fit_predict on all the data, but to fit the ols theres no sense in using all predictions, we can only use the ones we have a true treatment effect on.\n",
+    "\n",
+    "for x in predictions:\n",
+    "    stacking_data.append(x[assignment[i][1] == 1])\n",
+    "\n",
+    "#treated_elements = X[i][1][assignment[i][1] == 1]\n",
+    "#treated_y = y[i][1][assignment[i][1] == 1]"
    ]
   },
   {
@@ -297,15 +290,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#to get CATE from the causalml package, predict on some holdout set? \n",
-    "### FOR THIS YOU NEED TO CREATE A HOLDOUT SET AT ALL!!!!!\n",
-    "cate_r = learner_r.fit_predict(X[i], treatment = assignment[i], y=y[i], p=propensityScores[i])\n",
-    "\n",
-    "\n",
     "### NOT SURE THAT THIS MAKES SENSE AS A PLOT. \n",
     "### you are plotting the PREDICTED treatment effect on the treated. (cate_r)\n",
-    "### s\n",
-    "\n",
     "\n",
     "alpha=0.2\n",
     "bins=30\n",
@@ -327,7 +313,6 @@
     "### how to get the mean square error from a model? \n",
     "## take actual - predicted and square each one, sum over and take mean. \n",
     "\n",
-    "#### YOU ARE MISSING THE FACT THAT THERE ARE NOT AS MANY TREATED. THE PREDICTION ON NON TREATED MAKES NO SENSE. sorry!\n",
     "a = np.array(cate_r)\n",
     "b = np.array(treatment[i])\n",
     "mses = ((a-b)**2).mean()"
