create dataframes from causalml package synthetic data, implement proto stacking for t learner, r learner

--- a/first-draft.ipynb
+++ b/first-draft.ipynb
@@ -12,12 +12,11 @@
    "metadata": {},
    "source": [
     "# 1. Generate data\n",
-    "\n",
     "generate data according to the same process as Nie X. and Wager S. (2018) 'Quasi-Oracle Estimation of Heterogeneous Treatment Effects'. a library is provided by `causalml` from uber (https://github.com/uber/causalml). \n",
     "\n",
     "the goal in simulating data : to provide different examples of data generating processes, in order to conclude upon the effectiveness of stacking for treatment effects in each situation. \n",
     "\n",
-    "In an experimental setup, or a situation in which we have treated and untreated data, it is necessary to estimate the underlying distribution of the 'nuisance variables', the propensity score (the liklihood, given an observation's characteristics, to be treated), and the underlying treatment effect. As such, we simulate different X, propensity, and treatment functions. \n",
+    "In an experimental setup, or a situation in which we have treated and untreated data, it is necessary to estimate the underlying distribution of the 'nuisance variables', the propensity score (the likelihood, given an observation's characteristics, to be treated), and the underlying treatment effect. As such, we simulate different X, propensity, and treatment functions.\n",
     "\n",
     "`causalml` provides an implementation of each data generating function as seen in Nie & Wager, accessible through five possible modes passed to synthetic_data() :          \n",
     "\n",
@@ -26,16 +25,112 @@
     "            3 for an easy propensity and a difficult baseline.\n",
     "            4 for unrelated treatment and control groups.\n",
     "            5 for a hidden confounder biasing treatment.\n",
-    "`\n",
     "\n",
-    "returning a dataset inclduing   : \n",
-    "            - y ((n,)-array): outcome variable.\n",
-    "            - X ((n,p)-ndarray): independent variables.\n",
-    "            - w ((n,)-array): treatment flag with value 0 or 1.\n",
-    "            - tau ((n,)-array): individual treatment effect.\n",
-    "            - b ((n,)-array): expected outcome.\n",
-    "            - e ((n,)-array): propensity of receiving treatment.\n",
-    "`\n"
+    "!!!! talk here about how its useful to use the data generators from causal ml bc :\n",
+    " - this allows us to generate as much data as we need in order to cross validate. we essentially always have a holdout set read to test.\n",
+    " - we also need true treatment effects in order to set up a stacking pipeline, there is otherwise no way to estimate a stacking model without a true $\\tau(X)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 5 is out of bounds for axis 1 with size 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-9-e4823deb1ea0>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[0mX_neg\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcopy\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX_a\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     34\u001B[0m \u001B[0;31m# set the medication column to 0\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 35\u001B[0;31m \u001B[0mX_neg\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdf\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcolumns\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget_loc\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'assignment'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     36\u001B[0m \u001B[0mX_pos\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcopy\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX_a\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     37\u001B[0m \u001B[0;31m# set the medication column to 1\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mIndexError\u001B[0m: index 5 is out of bounds for axis 1 with size 5"
+     ]
+    }
+   ],
+   "source": [
+    "### YOU COULD DO THE DATA GENERATION THING HERE WITH CAUSALML, AND THEN CREATE A PIPELINE ENTIRELY WITH SKLEARN.\n",
+    "from causalml.dataset import *\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "np.seterr(divide='ignore', invalid='ignore')\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "### THESE NEED A RANDOM SEED IF YOU WANT TO USE THEM ON THE R LEARNER AND COMPARE.\n",
+    "### nb: b is the expected outcome, (i guess without treatment? is like a counterfactual??? unsure.)\n",
+    "\n",
+    "\n",
+    "y_a, X_a, w_a, tau_a, b_a, e_a = simulate_nuisance_and_easy_treatment()\n",
+    "#y_b, X_b, w_b, tau_b, b_b, e_b = simulate_randomized_trial()\n",
+    "#y_c, X_c, w_c, tau_c, b_c, e_c = simulate_easy_propensity_difficult_baseline()\n",
+    "#y_e, X_e, w_e, tau_e, b_e, e_e = simulate_hidden_confounder()\n",
+    "\n",
+    "### the simple learners with just sklearn and some ensemble methods.\n",
+    "### from this blog post : https://florianwilhelm.info/2017/04/causal_inference_propensity_score/\n",
+    "\n",
+    "const = np.ones(1000) ## default for causalml synthetic data gen funcs.\n",
+    "df = pd.DataFrame(data=X_a)\n",
+    "df['assignment'] = w_a\n",
+    "df['outcome'] = y_a\n",
+    "df.head()\n",
+    "\n",
+    "reg = RandomForestRegressor()\n",
+    "reg.fit(X_a, y_a)\n",
+    "\n",
+    "X_neg = np.copy(X_a)\n",
+    "# set the medication column to 0\n",
+    "X_neg[:, df.columns.get_loc('assignment')] = 0\n",
+    "X_pos = np.copy(X_a)\n",
+    "# set the medication column to 1\n",
+    "X_pos[:, df.columns.get_loc('assignment')] = 1\n",
+    "\n",
+    "preds_rnd = reg.predict(X_pos) / reg.predict(X_neg)\n",
+    "\n",
+    "\n",
+    "plt.axvline(np.mean(preds_rnd), label='mean')\n",
+    "plt.axvline(np.exp(-1), color='r', label='truth')\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# 2. Learner selection -\n",
+    "\n",
+    "## Grimmer et al, the 'T learner' and OLS.\n",
+    "Nie and Wager estimate treatement effects using (among other heterogenous treatment effect estimators) the 'T-Learner', we take this learner to be the same as that which is used in Grimmer (2017)\n",
+    "`causalml library also provides a T-learner as used in Grimmer (2017), where the treatment effect is estimated by simple comparison of the treated against the untreated.\n",
+    "\n",
+    "The T Learner fits the functions $ \\mu^*_w(x) = E(Y\\mid X = x, W = w)$ separately for the treatment and the control groups (for $w \\in{0, 1}$), and then esimates $\\tau(x) = \\mu_1(x) - \\mu_0(x)$\n",
+    "The T learner (`BaseTRegressor()`) as implemented by `causalml` can be fed a machine learning model to estimate and predict treatment effects.\n",
+    "it will therefore be useful to have a stacking pipeline which includes several T-Learners, over different datasets in order to examine how well a Stacked T learner does under different data generating functions.\n",
+    "\n",
+    "we can use this to stack estimates exactly as in Grimmer, and compare them to the R learners/DML learnings (also stacked) as in Nie, Wager\n",
+    "this would answer the questions:\n",
+    " - how does stacking **without** double machine learning compare to the R learner on its own? Is there an advantage to using (the best..) R learner over simple stacking? and what kind of libraries are already available for such a pipeline?\n",
+    " - how much can stacking help if we do not (can not) estimate propensity scores or distinct nuisance funcitions in the dataset?\n",
+    " - how does stacking an R learner compare to (the best) single DML model?\n",
+    "\n",
+    "the T learner does not explicitly account for propensity scores, or for the 'nuisance funciton' separate from the treatment effect.\n",
+    "\n",
+    "the R learner, on the other hand:\n",
+    " - R leaner, DML, etc etc.\n",
+    " - The proposal from Nie and Wager for using some 'out of the box models and stacking the treatment effect estimations\n",
+    "\n",
+    "The R learner can also be fed different models, and the results similarly stacked."
    ]
   },
   {
@@ -60,29 +155,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The sklearn.utils.testing module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.utils. Anything that cannot be imported from sklearn.utils is now part of the private API.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name and learner!!!!\n",
-      "learner_xgb\n",
-      "name and learner!!!!\n",
-      "learner_lr\n",
-      "name and learner!!!!\n",
-      "learner_dtr\n"
-     ]
+   "outputs": [],
+   "source": [
+    "from causalml.inference.meta import BaseRRegressor, BaseTRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "import statsmodels.api as sm\n",
+    "import copy\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
+   "source": [
+    "## can start with estimates from the T learner\n",
+    "\n",
+    "learner_t_xgb = BaseTRegressor(learner=XGBRegressor())\n",
+    "learner_t_mlpr = BaseTRegressor(learner=MLPRegressor())\n",
+    "learner_t_lr = BaseTRegressor(learner=LinearRegression())\n",
+    "\n",
+    "estimators = {'learner_t_xgb' : BaseTRegressor(learner=XGBRegressor()),\n",
+    "              'learner_t_mlpr': BaseTRegressor(learner=MLPRegressor()),\n",
+    "              'learner_t_lr' : BaseTRegressor(learner=LinearRegression())}\n",
+    "\n",
+    "predicitons_t_models = get_synthetic_preds(simulate_nuisance_and_easy_treatment,\n",
+    "                                               n=50000,\n",
+    "                                               estimators=estimators)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
    "source": [
     "'''\n",
     "estimators = {'learner_xgb': BaseRRegressor(learner=XGBRegressor()),\n",
@@ -92,27 +212,12 @@
     "              'learner_knr': BaseRRegressor(learner=KNeighborsRegressor()),\n",
     "              'learner_svr': BaseRRegressor(learner=SVR())}\n",
     "              '''\n",
-    "\n",
-    "from causalml.dataset import *\n",
-    "from causalml.inference.meta import BaseRRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from xgboost import XGBRegressor\n",
-    "\n",
-    "\n",
-    "## start a model -- feeding in XGB => to fit the nuisance model. feed in elasticpropensitymodel\n",
-    "learner_xgb = BaseRRegressor(learner=XGBRegressor())\n",
-    "learner_lr = BaseRRegressor(learner=LinearRegression())\n",
-    "learner_dtr = BaseRRegressor(learner=DecisionTreeRegressor())\n",
-    "\n",
     "###would be cool to find some other working learners, and to start messing with the params of each!!!!\n",
     "#learner_knr = BaseRRegressor(learner=KNeighborsRegressor())\n",
     "#learner_svr = BaseRRegressor(learner=SVR())\n",
     "#learner_ctr = BaseRRegressor(learner=CausalTreeRegressor())\n",
-    "\n",
-    "learner_xgb = BaseRRegressor(learner=XGBRegressor())\n",
-    "learner_lr = BaseRRegressor(learner=LinearRegression())\n",
-    "learner_dtr = BaseRRegressor(learner=DecisionTreeRegressor())\n",
+    "#'learner_sgd': BaseRRegressor(learner=SGDRegressor())\n",
+    "#learner_nnr = BaseRRegressor(learner=MLPRegressor()) ##Multi-layer Perceptron regressor\n",
     "\n",
     "estimators = {'learner_xgb': BaseRRegressor(learner=XGBRegressor()),\n",
     "              'learner_lr': BaseRRegressor(learner=LinearRegression()),\n",
@@ -128,34 +233,72 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
-    "## validating accuracy : \n",
-    "\"\"\"Generate a summary for predictions on synthetic data for train and holdout using specified function\n",
+    "### THE STADCKING PART (AGAIN.)\n",
     "\n",
-    "    Args:\n",
-    "        synthetic_data_func (function): synthetic data generation function\n",
-    "        n (int, optional): number of samples per simulation\n",
-    "        valid_size(float,optional): validation/hold out data size\n",
-    "        k (int, optional): number of simulations\n",
+    "y_stacking = predictions['generated_data']['tau']\n",
+    "pred_copy = copy.deepcopy(predictions)\n",
+    "pred_copy.pop('Actuals')\n",
+    "pred_copy.pop('generated_data')\n",
     "\n",
+    "### iterate over this better so you can add mroe models.\n",
+    "x_stacking = np.vstack((predictions['learner_xgb'], predictions['learner_lr'], predictions['learner_dtr'])).T\n",
     "\n",
-    "    Returns:\n",
-    "        (tuple): summary evaluation metrics of predictions for train and validation:\n",
+    "### this is using ridgeCV for the method of ols.\n",
+    "### grimmer require that the coefficients of the final stacking regression sum to 1.\n",
+    "### HOW CAN WE DO THIS IN SKLEARN WHILE STILL USING CAUSALML?\n",
     "\n",
-    "          - summary_train (pandas.DataFrame): training data evaluation summary\n",
-    "          - summary_train (pandas.DataFrame): validation data evaluation summary\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    ###YOU CAN PROBABLY FUCK WITH THE SOURCE CODE OF THIS TO MAKE A DIFFERENT VALIDATION SUMMARY, NO PROB. \n",
+    "model = sm.OLS(y_stacking, x_stacking)\n",
+    "model2 = model.fit_regularized(alpha=0.0, L1_wt=1.0, start_params=None, profile_scale=False, refit=False)\n",
+    "print(model2.params)\n",
+    "print(sum(model2.params))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "this is actually a sad shortcoming of the `causalml` library, that it is not possible to feed models directly into sklearn.ensemble models.\n",
+    "normally an ensemble class from sklear woudl take a dict (i think..) of models and a dataset, do the entire pipeline, and then output the model.\n",
     "\n",
-    "train_summary, validation_summary = get_synthetic_summary_holdout(simulate_nuisance_and_easy_treatment,\n",
-    "                                                                  n=10000,\n",
-    "                                                                  valid_size=0.2,\n",
-    "                                                                  k=10)"
+    "if we would like to imitate grimmer we would also need a solution to the problem that we currently dont have a way to contstrain the ensemble coefficients such that they must sum to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "predictions_A = get_synthetic_preds(simulate_nuisance_and_easy_treatment, n=50000)\n",
+    "predictions_B = get_synthetic_preds(simulate_randomized_trial, n=50000)\n",
+    "predictions_C = get_synthetic_preds(simulate_easy_propensity_difficult_baseline, n=50000)\n",
+    "predictions_E = get_synthetic_preds(simulate_hidden_confounder, n=50000)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_A = get_synthetic_preds(simulate_nuisance_and_easy_treatment, n=50000)\n",
+    "predictions_B = get_synthetic_preds(simulate_randomized_trial, n=50000)\n",
+    "predictions_C = get_synthetic_preds(simulate_easy_propensity_difficult_baseline, n=50000)\n",
+    "predictions_E = get_synthetic_preds(simulate_hidden_confounder, n=50000)"
    ]
   }
  ],
